// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NPM package > export \`abstract/loadFileUploaderFrom.js\` should match snapshot > abstract/loadFileUploaderFrom.js 1`] = `
{
  "UC_WINDOW_KEY": "UC",
  "loadFileUploaderFrom": [Function],
}
`;

exports[`NPM package > export \`env\` should match snapshot > env 1`] = `
{
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/file-uploader.iife.min.js 1`] = `{}`;

exports[`NPM package > exports \`web\` should match snapshot > web/file-uploader.min.js 1`] = `
{
  "ActivityBlock": [Function],
  "ActivityHeader": [Function],
  "BaseComponent": [Function],
  "Block": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "Data": [Function],
  "DropArea": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "EVERNOTE": "evernote",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "ONEDRIVE": "onedrive",
    "VK": "vk",
  },
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "ModalEvents": {
    "ADD": "modal:add",
    "CLOSE": "modal:close",
    "CLOSE_ALL": "modal:closeAll",
    "DELETE": "modal:delete",
    "DESTROY": "modal:destroy",
    "OPEN": "modal:open",
  },
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PresenceToggle": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SolutionBlock": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DRAW": "draw",
    "DROPBOX": "dropbox",
    "DROP_AREA": "drop-area",
    "EVERNOTE": "evernote",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
    "VK": "vk",
  },
  "UploaderBlock": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-basic.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-cloud-image-editor.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-cloud-image-editor.min.js 1`] = `
{
  "BtnUi": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "CropFrame": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "Icon": [Function],
  "LineLoaderUi": [Function],
  "PresenceToggle": [Function],
  "SliderUi": [Function],
  "defineComponents": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-inline.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-inline.min.js 1`] = `
{
  "ActivityBlock": [Function],
  "ActivityHeader": [Function],
  "BaseComponent": [Function],
  "Block": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "Data": [Function],
  "DropArea": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "EVERNOTE": "evernote",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "ONEDRIVE": "onedrive",
    "VK": "vk",
  },
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "ModalEvents": {
    "ADD": "modal:add",
    "CLOSE": "modal:close",
    "CLOSE_ALL": "modal:closeAll",
    "DELETE": "modal:delete",
    "DESTROY": "modal:destroy",
    "OPEN": "modal:open",
  },
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PresenceToggle": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SolutionBlock": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DRAW": "draw",
    "DROPBOX": "dropbox",
    "DROP_AREA": "drop-area",
    "EVERNOTE": "evernote",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
    "VK": "vk",
  },
  "UploaderBlock": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-minimal.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-minimal.min.js 1`] = `
{
  "ActivityBlock": [Function],
  "ActivityHeader": [Function],
  "BaseComponent": [Function],
  "Block": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "Data": [Function],
  "DropArea": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "EVERNOTE": "evernote",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "ONEDRIVE": "onedrive",
    "VK": "vk",
  },
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "ModalEvents": {
    "ADD": "modal:add",
    "CLOSE": "modal:close",
    "CLOSE_ALL": "modal:closeAll",
    "DELETE": "modal:delete",
    "DESTROY": "modal:destroy",
    "OPEN": "modal:open",
  },
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PresenceToggle": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SolutionBlock": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DRAW": "draw",
    "DROPBOX": "dropbox",
    "DROP_AREA": "drop-area",
    "EVERNOTE": "evernote",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
    "VK": "vk",
  },
  "UploaderBlock": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-regular.min.css 1`] = `
{
  "default": "",
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-file-uploader-regular.min.js 1`] = `
{
  "ActivityBlock": [Function],
  "ActivityHeader": [Function],
  "BaseComponent": [Function],
  "Block": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "Data": [Function],
  "DropArea": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "EVERNOTE": "evernote",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "ONEDRIVE": "onedrive",
    "VK": "vk",
  },
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "ModalEvents": {
    "ADD": "modal:add",
    "CLOSE": "modal:close",
    "CLOSE_ALL": "modal:closeAll",
    "DELETE": "modal:delete",
    "DESTROY": "modal:destroy",
    "OPEN": "modal:open",
  },
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PresenceToggle": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SolutionBlock": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DRAW": "draw",
    "DROPBOX": "dropbox",
    "DROP_AREA": "drop-area",
    "EVERNOTE": "evernote",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
    "VK": "vk",
  },
  "UploaderBlock": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;

exports[`NPM package > exports \`web\` should match snapshot > web/uc-img.min.js 1`] = `
{
  "Img": [Function],
}
`;

exports[`NPM package > root ssr stubs export should match snapshot > root export 1`] = `
{
  "ActivityBlock": [Function],
  "ActivityHeader": [Function],
  "BaseComponent": [Function],
  "Block": [Function],
  "BtnUi": [Function],
  "CameraSource": [Function],
  "CloudImageEditor": [Function],
  "CloudImageEditorActivity": [Function],
  "CloudImageEditorBlock": [Function],
  "Config": [Function],
  "Copyright": [Function],
  "CropFrame": [Function],
  "Data": [Function],
  "DropArea": [Function],
  "EditorAspectRatioButtonControl": [Function],
  "EditorCropButtonControl": [Function],
  "EditorFilterControl": [Function],
  "EditorFreeformButtonControl": [Function],
  "EditorImageCropper": [Function],
  "EditorImageFader": [Function],
  "EditorOperationControl": [Function],
  "EditorScroller": [Function],
  "EditorSlider": [Function],
  "EditorToolbar": [Function],
  "ExternalSource": [Function],
  "ExternalUploadSource": {
    "BOX": "box",
    "DROPBOX": "dropbox",
    "EVERNOTE": "evernote",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "ONEDRIVE": "onedrive",
    "VK": "vk",
  },
  "FileItem": [Function],
  "FileUploaderInline": [Function],
  "FileUploaderMinimal": [Function],
  "FileUploaderRegular": [Function],
  "FormInput": [Function],
  "IS_SSR_STUBS": true,
  "Icon": [Function],
  "Img": [Function],
  "LineLoaderUi": [Function],
  "Modal": [Function],
  "ModalEvents": {
    "ADD": "modal:add",
    "CLOSE": "modal:close",
    "CLOSE_ALL": "modal:closeAll",
    "DELETE": "modal:delete",
    "DESTROY": "modal:destroy",
    "OPEN": "modal:open",
  },
  "PACKAGE_NAME": "blocks",
  "PACKAGE_VERSION": "0.0.0-stub",
  "PresenceToggle": [Function],
  "ProgressBar": [Function],
  "ProgressBarCommon": [Function],
  "Select": [Function],
  "SimpleBtn": [Function],
  "SliderUi": [Function],
  "SolutionBlock": [Function],
  "SourceBtn": [Function],
  "SourceList": [Function],
  "Spinner": [Function],
  "StartFrom": [Function],
  "Thumb": [Function],
  "UID": [Function],
  "UploadCtxProvider": [Function],
  "UploadList": [Function],
  "UploadSource": {
    "API": "js-api",
    "BOX": "box",
    "CAMERA": "camera",
    "DRAW": "draw",
    "DROPBOX": "dropbox",
    "DROP_AREA": "drop-area",
    "EVERNOTE": "evernote",
    "EXTERNAL": "external",
    "FACEBOOK": "facebook",
    "FLICKR": "flickr",
    "GDRIVE": "gdrive",
    "GPHOTOS": "gphotos",
    "HUDDLE": "huddle",
    "LOCAL": "local",
    "MOBILE_PHOTO_CAMERA": "mobile-photo-camera",
    "MOBILE_VIDEO_CAMERA": "mobile-video-camera",
    "ONEDRIVE": "onedrive",
    "URL": "url",
    "VK": "vk",
  },
  "UploaderBlock": [Function],
  "UrlSource": [Function],
  "defineComponents": [Function],
  "defineLocale": [Function],
  "loadFileUploaderFrom": [Function],
  "toKebabCase": [Function],
}
`;
